/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
 */
 
plugins
{
	id 'java'
	id 'application'
	id 'eclipse'
	id 'idea'
}

sourceCompatibility = 14
targetCompatibility = 14
compileJava.options.encoding = "UTF-8"

tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}

configurations { extra }

repositories
{
	jcenter()
	mavenCentral()
	maven { url 'https://maven.syl2010.fr/artifactory/libs-release/' }
}

dependencies
{	
	implementation 'com.discord4j:discord4j-core:3.0.12'
	implementation group: 'fr.syl2010', name: 'Utils', version: '1.4.7'

	implementation fileTree(dir: 'libs', include: ['*.jar'])
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'

	extra 'io.r2dbc:r2dbc-pool:0.8.3.RELEASE'
	extra 'dev.miku:r2dbc-mysql:0.8.1.RELEASE'
	extra 'io.projectreactor:reactor-core:3.3.4.RELEASE'

	configurations.implementation.extendsFrom(configurations.extra)
	
	constraints {
		implementation ('io.projectreactor.netty:reactor-netty') {
			version {
				strictly '[1.8, 1.9['
				prefer '0.8.14.RELEASE'
			}
		}
	}
}

tasks.withType(Jar) { from { configurations.extra.collect { it.isDirectory() ? it : zipTree(it) } } }

// Define the main class for the application
mainClassName = 'net.gunivers.gunislave.Main'